# physics-informed-ml

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: base.yaml  bayesian_compressor.yaml  fno_heat.yaml  pump_surrogate.yaml  surrogate_optimizer.yaml
core/: benchmark.py  metrics.py
docs/superpowers/plans/: 2026-04-16-week1-pump-surrogate.md
docs/superpowers/specs/: 2026-04-16-physics-informed-ml-design.md
experiments/exp2_fno_heat_transfer/: README.md  data.py  evaluate.py  model.py  train.py
experiments/exp3_bayesian_compressor/: README.md  data.py  evaluate.py  model.py  train.py
experiments/exp4_surrogate_optimizer/: README.md  baselines.py  evaluate.py  optimizer.py  problem.py
scripts/: generate_demo_checkpoint.py  train_pump_surrogate.py
src/api/: app.py
src/physics_models/: data_generator.py  pump.py
src/surrogates/: calibration.py  ensemble.py  pinn.py
tests/: test_api.py  test_calibration.py  test_core.py  test_pinn.py  test_pump_physics.py
tests/exp2/: test_data.py  test_evaluate.py  test_model.py  test_train.py
tests/exp3/: test_data.py  test_evaluate.py  test_model.py  test_train.py
tests/exp4/: test_baselines.py  test_evaluate.py  test_optimizer.py  test_problem.py
