[project]
name = "physics-informed-ml"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2",
    "lightning>=2.2",
    "hydra-core>=1.3",
    "pydantic>=2.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "mlflow>=2.11",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "scipy>=1.12",
    "numpy>=1.26",
    "pandas>=2.2",
    "h5py>=3.10",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "httpx>=0.27", "ruff>=0.4", "isort>=5.13"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.isort]
profile = "black"
line_length = 100
